.provarCaches/00Df2000001KKNJEA4/objects/INRF__Rule_Error__c.object
<CustomObject>
    <description>To log the system / unhandled exceptions while executing rules</description>
    <fields>
        <fullName>INRF__Class_Name__c</fullName>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Method_Name__c</fullName>
        <label>Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rule Evaluation</fullName>
                    <default>true</default>
                    <label>Rule Evaluation</label>
                </value>
                <value>
                    <fullName>Rule Execution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__Parameters__c</fullName>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Rule Error</label>
    <listViews>
        <fullName>INRF__All</fullName>
        <columns>NAME</columns>
        <columns>INRF__Class_Name__c</columns>
        <columns>INRF__Method_Name__c</columns>
        <columns>INRF__Module__c</columns>
        <columns>INRF__Parameters__c</columns>
        <columns>INRF__Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Error-{00000}</displayFormat>
        <label>Rule Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>